# django-todo-app

./: .env.example  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  gunicorn_config.py  pyproject.toml
todo_app/: forms.py  models.py  urls.py  views.py
todo_app/migrations/: 0001_initial.py
todo_app/templates/todo_app/: base.html  index.html
todo_project/: settings.py
