[tool.poetry]
name = "todo-project"
version = "0.1.0"
description = ""
authors = ["Michal Cesarczyk <michal.cesarczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
